		
	* Bug Fix: Now can force cookie usage to prevent accidental or intentional session hijacking by the passing of session ids in the url. (Adam Franco)
		
	* Bug Fix: Authentication/Authorization: Now can dirty the authentication cache to allow HTTP authentication (interrupting the execution cycle) to update the currently authenticated agent. (Adam Franco)
		
	* Change: Authentication: Now can pass custom relm and callback function to execute on cancel for the HTTP authentication. (Adam Franco)
		
	* Bug Fix: ErrorHandler: Removed debugging line. (Adam Franco)
	
v. 0.7.4 (2006-08-04)
----------------------------------------------------
		
	* Bug Fix: Chronology: fromString() methods now return null for invalid strings rather than doing a die(). (Adam Franco)
		
	* Bug Fix: Repository: Authoritative values are now only added if a valid data object is passed. (Adam Franco)
	
v. 0.7.3 (2006-08-02)
----------------------------------------------------
		
	* Bug Fix: Chronology: Now does not die when fromString is called on an invalid date. Returns false instead. (Adam Franco)
		
	* Bug Fix: Repository: Now enforces deleting of file/thumbnail data properly. Previously, file records were being orphened when assets were deleted. (Adam Franco)
		
	* Bug Fix: Authorization: Now calls addslashes() on agent and group ids to prevent errors when those ids contain apostrophes. (Adam Franco)
		
	* Bug Fix: Logging: Improved performance of the LogEntryIterator to make a more reponsive interface. (Adam Franco)
		
	* Change: Logging: Errors now log the query string as well as the referer to better trace errors. (Adam Franco)
	
v. 0.7.2 (2006-07-21)
----------------------------------------------------
		
	* Bug Fix: ImageProcessor: Now doesn't try to convert text files as images. (Adam Franco)
	
v. 0.7.1 (2006-06-20)
----------------------------------------------------
		
	* Bug Fix: AuthZ: Quotes in Group Ids were breaking queries. (Adam Franco)
	
v. 0.7.0 (2006-06-16)