@@ -19,6 +19,12 @@
 			to allow HTTP authentication (interrupting the execution cycle) to 
 			update the currently authenticated agent.
 		 (<i>Adam Franco</i>)
+		<li/> Bug Fix:
+	 
+			Authentication: Now passes an auth type key to the token collectors
+			to allow them to differentiate between prompting again for an auth type
+			and just trying to get the tokens for another auth type.
+		 (<i>Adam Franco</i>)
 		<li/> Change:  
 			Authentication: Now can pass custom relm and callback function to 
 			execute on cancel for the HTTP authentication.
